removed un-used packages, fixed card getting clipped

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -9,6 +9,7 @@
 
 .wrap {
     flex-wrap: wrap;
+    overflow: visible;
 }
 
 .home__section::-webkit-scrollbar {
